--- a/nuxt-app/assets/style/base/_var.scss
+++ b/nuxt-app/assets/style/base/_var.scss
@@ -1,27 +1,41 @@
 * {
-    box-sizing: border-box;
-  }
-  
-  html,
-  body {
-    margin: 0;
-    padding: 0;
-    height: 100%;
-    width: 100%;
-  }
-  h1,
-  h2,
-  h3,
-  h4,
-  p {
-    margin: 0;
-    padding: 0;
-  }
-  
-  a {
-    all: unset;
-  }
-  
-  button {
-    all: unset;
-  }
+  box-sizing: border-box;
+}
+
+html,
+body {
+  margin: 0;
+  padding: 0;
+  height: 100%;
+  width: 100%;
+  font-family: 'Noto Sans TC', serif;
+}
+
+h1,
+h2,
+h3 {
+  margin: 0;
+  padding: 0;
+  font-family: 'Kaisei Tokumin', serif;
+}
+
+h4,
+p {
+  margin: 0;
+  padding: 0;
+  font-family: 'Noto Sans TC', serif;
+}
+
+
+a {
+  all: unset;
+}
+
+span {
+  font-family: 'Noto Sans TC', serif;
+}
+
+button {
+  all: unset;
+  font-family: 'Parkinsans', sans-serif;
+}
