--- a/nuxt-app/assets/style/main.scss
+++ b/nuxt-app/assets/style/main.scss
@@ -8,6 +8,7 @@
 @import "./components/sidebarMenu";
 @import "./components/bannerCards";
 @import "./components/calenderBoard";
+@import "./components/about";
 
 // component
 @import "./page/index";
